--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <table class="menu">
                 <tbody>
                     <tr>
-                        <td><img src="searchico.jpg" height="50" width="50"></td>
-                        <td><img src="menu.png" height="50" width="50"></td>
+                        <td><img src="searchico.jpg" class="icn"></td>
+                        <td><img src="menu.png" class="icn"></td>
                     </tr>
                 </tbody>
             </table>
@@ -28,19 +28,33 @@
     <div class="tab2">
         <div class="hlink"><a class="ltcov" href="">Latest COVID-19 updates </a></div>   
     </div>
-    <div class="img-container1">
-        <div class="img1"><img src="pi_one.jpg">
-            <br><br><br><label class="rpie">Ten years of</label><br>
-                <label class="rpie">Raspberry pi</label> <br>
-                <p>Find out <a class="hf" href=""> how the UK's bestselling computer helps young people take their first steps into the amazing world of coding –</a> and has even found a home in space.
 
+
+
+    <div class="imgpie">
+    <div class="imgpie1">
+        <div class="imgpie11"></div>
+        <div class="imgpie12">
+            <label class="lbll1">  Ten years of  </label><br>
+            <label class="lbll1">  Raspberry Pi  </label>
         </div>
-        <div class="img2"><img src="pi_main.jpg">
-            <br><img  src="pi_small_three.jpg">
-            <img src="pi_small_four.jpg">
-
+        <div class="imgpie13">
+            Find out <a href=""> how the UK's bestselling computer helps young people take their first steps into the amazing world of coding –</a> and has even found a home in space.
         </div>
     </div>
+    <div class="imgpie2">
+        <div class="imgpie21"></div>
+        <div class="imgpie22">
+            <div class="imgpie221"></div>
+            <div class="imgpie222"></div>
+            
+        </div>
+    </div>
+
+</div>
+
+
+
     <div class="graduate">
         <div class="grleft">
             <label class="lbl11">Undergraduate</label>
@@ -52,7 +66,7 @@
         </div> 
     <div class="grright">
         <label class="lbl11">Graduate</label>
-        <div class="c1">
+        <div class="c2">
         <input type="button" value="Learn more" class="lbtn">
         <input type="button" value="Find your course" class="fbtn">
         </div>
